--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="main">
         <header>
-            <a href="#"><img src="img/sephora.png" alt="logo" class="logo"></a>
+            <a href="#"><img src="img/sephora b.png" alt="logo" class="logo"></a>
             <ul class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
